# projectvault-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Caddyfile  Dockerfile  Dockerfile.lambda  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requests.http
.github/workflows/: ci.yml  deploy-frontend.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py
app/api/: deps.py  routes.py  routes_auth.py  routes_documents.py  routes_invites.py  routes_projects.py
app/core/: config.py  exceptions.py  security.py
app/db/: session.py
app/lambda_handlers/: __init__.py  s3_events.py
app/models/: __init__.py  document.py  project.py  user.py
app/repositories/: documents.py  projects.py  users.py
app/schemas/: __init__.py  auth.py  document.py  project.py
app/services/: auth_service.py  (+3 more)
cloudflared/: config.yml
docs/: API_CONVENTIONS.md  DEPLOYMENT.md  ERD.md  PRODUCT_SPEC.md  PROJECT_PLAN.md  ROADMAP.md  ROLE_PERMISSIONS.md  STORAGE_DECISION_MATRIX.md  TARGET_ARCHITECTURE.md  TODO.md
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
scripts/: db-shell.sh  reset-db.sh  s3-event-smoke-test.sh  s3-smoke-test.sh  seed-sample-data.py  seed-sample-data.sh
tests/: conftest.py  test_alembic_schema.py  test_auth.py  test_docker_compose_config.py  test_documents.py  test_phase6_hardening.py  test_projects.py  test_s3_event_smoke_script.py  test_s3_events.py  test_s3_smoke_script.py  test_seed_sample_data.py  test_storage.py
(+31 files in other folders)
