[project]
name = "projectvault-api"
version = "0.1.0"
description = "Secure project profiles and document management API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.0.0",
    "alembic>=1.13.0",
    "pwdlib[argon2]>=0.2.1",
    "PyJWT>=2.9.0",
    "email-validator>=2.2.0",
    "boto3>=1.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: pure helper and configuration tests with no app/database/process boundary",
    "integration: in-process API, database, service, script, and handler tests",
    "e2e: live Docker Compose smoke tests, skipped unless explicitly enabled",
]
